<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CalendarActivity"
    tools:showIn="@layout/activity_calendar">

    <com.tyczj.extendedcalendarview.ExtendedCalendarView
        android:id="@+id/extendedCalendarView_addLocationSiteCalendar_CALENDAR"
        android:layout_width="match_parent"
        android:layout_height="380dp" />

    <RelativeLayout
        android:id="@+id/event_click_box"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/extendedCalendarView_addLocationSiteCalendar_CALENDAR"
        android:gravity="center"
        android:visibility="visible">

        <TextView
            android:id="@+id/event_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_click"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#767676" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/event_detail"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/extendedCalendarView_addLocationSiteCalendar_CALENDAR"
        android:visibility="invisible">

        <TextView
            android:id="@+id/event_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/event_date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/event_date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/event_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_date"
            android:layout_marginTop="8dp"
            android:text="@string/event_type"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/event_type"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/event_type"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/event_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_type"
            android:layout_marginTop="8dp"
            android:text="@string/event_description"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/event_description"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/event_description"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

</RelativeLayout>
